--- a/src/package.json
+++ b/src/package.json
@@ -24,7 +24,7 @@
         "datatables.net-responsive-bs4": "^2.2.3",
         "datatables.net-searchpanes-bs4": "^1.0.1",
         "hammerjs": "^2.0.8",
-        "jquery": "^3.2",
+        "jquery": ">=3.5.0",
         "jquery-ui-dist": "^1.12.1",
         "jquery.scrollbar": "^0.2.11",
         "laravel-mix": "^4.0.7",
@@ -32,7 +32,7 @@
         "minimist": ">=1.2.2",
         "popper.js": "^1.16.1",
         "resolve-url-loader": "^2.3.1",
-        "sass": "^1.26.3",
+        "sass": "^1.26.5",
         "sass-loader": "^7.1.0",
         "vue-template-compiler": "^2.6.11"
     },
